Bug 1576335 - Fix DeviceInfoImpl::_apiLock leaks by cherry-pick. r=padenot

This is a cherry-pick of upstream libwebrtc's
https://webrtc.googlesource.com/src/+/5b5de21accfd29e21cba2d6f38e3087e1f731be6

This gets rid of the path in DeviceInfoImpl::GetBestMatchedCapability that can
leave the _apiLock exclusively locked forever.

Differential Revision: https://phabricator.services.mozilla.com/D132139