third_party/libwebrtc/modules/video_capture/windows/device_info_ds.cc
@@ -163,7 +163,7 @@ int32_t DeviceInfoDS::Init() {
   return 0;
 }
 uint32_t DeviceInfoDS::NumberOfDevices() {
-  ReadLockScoped cs(_apiLock);
+  MutexLock lock(&_apiLock);
   return GetDeviceInfo(0, 0, 0, 0, 0, 0, 0);
 }
 
@@ -175,7 +175,7 @@ int32_t DeviceInfoDS::GetDeviceName(uint32_t deviceNumber,
                                     char* productUniqueIdUTF8,
                                     uint32_t productUniqueIdUTF8Length,
                                     pid_t* pid) {
-  ReadLockScoped cs(_apiLock);
+  MutexLock lock(&_apiLock);
   const int32_t result = GetDeviceInfo(
       deviceNumber, deviceNameUTF8, deviceNameLength, deviceUniqueIdUTF8,
       deviceUniqueIdUTF8Length, productUniqueIdUTF8, productUniqueIdUTF8Length);
@@ -352,7 +352,7 @@ IBaseFilter* DeviceInfoDS::GetDeviceFilter(const char* deviceUniqueIdUTF8,
 int32_t DeviceInfoDS::GetWindowsCapability(
     const int32_t capabilityIndex,
     VideoCaptureCapabilityWindows& windowsCapability) {
-  ReadLockScoped cs(_apiLock);
+  MutexLock lock(&_apiLock);
 
   if (capabilityIndex < 0 || static_cast<size_t>(capabilityIndex) >=
                                  _captureCapabilitiesWindows.size()) {
@@ -649,7 +649,7 @@ int32_t DeviceInfoDS::DisplayCaptureSettingsDialogBox(
     void* parentWindow,
     uint32_t positionX,
     uint32_t positionY) {
-  ReadLockScoped cs(_apiLock);
+  MutexLock lock(&_apiLock);
   HWND window = (HWND)parentWindow;
 
   IBaseFilter* filter = GetDeviceFilter(deviceUniqueIdUTF8, NULL, 0);
